2010-08-23  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] -webkit-text-stroke is broken due to Qt::TextBypassShaping
        https://bugs.webkit.org/show_bug.cgi?id=44403

        Don't bypass the Harfbuzz shaping if we're drawing text with a stroke.
        For canvas, always use complex text shaping since stroke and fill are decoupled.

        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::measureText):
        (WebCore::CanvasRenderingContext2D::drawTextInternal):
        * platform/graphics/qt/FontQt.cpp:
        (WebCore::drawTextCommon):


Canonical link: https://commits.webkit.org/56580@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65801 268f45cc-cd09-0410-ab3c-d52691b4dbfc